# vendor-bluez-alsa

src/: bluealsa.h  bluez-a2dp.h  bluez-iface.h  bluez.c  io.c  main.c  rfcomm.c  transport.c
src/shared/: ctl-socket.c  ctl-socket.h
utils/: Makefile.am  a2dp_ctl.c  a2dp_ctl.h  aplay.c  hfp_ctl.c  hfp_ctl.h  hfp_ctl_cmd.c  lib_a2dp_ctl.c  sco_handler.c
